2022-10-06  James D. Trotter  <james@simula.no>

	* mtxgemm: program for computing matrix-matrix products

	* mtxrand: program for generating random matrices and vectors

2022-10-05  James D. Trotter  <james@simula.no>

	* libmtx/linalg/blas/dense.c: add matrix-matrix multiplication
	based on BLAS [sd]gemm.

	* libmtx/linalg/base/dense.c: add basic matrix-matrix
	multiplication (gemm)

2022-09-28  James D. Trotter  <james@simula.no>

	* configure.ac: make it easier to select user-defined BLAS library

2022-09-08 James D. Trotter <james@simula.no>

	Implement matrix reordering based on METIS's nested dissection
	algorithm.

2022-04-08 James D. Trotter <james@simula.no>

	Refactor dense vector implementations to have a serial base
	implementation and another implementation with BLAS-accelerated
	operations. Also, add a third implementation to support OpenMP
	shared-memory parallel dense vector operations.

2021-08-05 James D. Trotter <james@simula.no>

	Implement column major sorting for sparse matrices in coordinate
	format.

	Add functions for computing column pointers and row indices.

2021-08-02 James D. Trotter <james@simula.no>

	Implement several new commands, including mtxscal, mtxaxpy, mtxdot
	and mtxnrm2. These are based on the corresponding BLAS operations.

	Also, add functions for setting matrix or vector values equal to
	zero or a given constant value.

	Add support for writing vectors in coordinate format to file.

	Remove some unused functions, improve error handling and fix
	various, minor issues.

2021-07-28 James D. Trotter <james@simula.no>

	Implement the command `mtxreorder', which reorders a symmetric
	sparse matrix using RCM.

	Add `mtx_matrix_reorder_rcm' to reorder a sparse matrix with
	symmetric sparsity pattern based on the Reverse Cuthill-McKee
	algorithm.

	Add `mtx_matrix_row_index' and `mtx_matrix_column_index' to obtain
	the row or column index of a given nonzero of a matrix.
