@@ -1,3 +1,9 @@
+2022-11-28  James D. Trotter  <james@simula.no>
+
+	* libmtx/util/metis.c (metis_nd): fix an issue where nested
+	dissection ordering fails for non-square matrices due to missing
+	symmetric nonzeros.
+
 2022-10-06  James D. Trotter  <james@simula.no>
 
 	* mtxgemm: program for computing matrix-matrix products
